Fix contrast error

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -205,7 +205,7 @@ p {
 }
 
 #closeBanner {
-    color: red;
+    color: black;
     font-size: 2rem;
     background: lightblue;
     align-self: center;
